# SRM

./: README.md  pyproject.toml
src/srm_analysis/: __init__.py  downscale.py  dummy_data.py  spei.py
