[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "srm_analysis"
version = "0.1.0"
authors = [
  { name="Naufal", email="naufal@example.com" },
]
description = "A Python package for Solar Radiation Modification (SRM) climate data analysis, focusing on downscaling, bias correction, and SPEI calculation."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "xarray",
    "scipy",
    "cftime"
]
